target/kubernetes/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: e4de24b75fe3e56b67360458aa1de9ad19b5c2af
    app.quarkus.io/build-timestamp: 2024-01-31 - 05:50:34 +0000
  labels:
    app.kubernetes.io/name: people
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: people
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: people
    app.kubernetes.io/version: 1.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: e4de24b75fe3e56b67360458aa1de9ad19b5c2af
    app.quarkus.io/build-timestamp: 2024-01-31 - 05:50:34 +0000
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/name: people
    app.kubernetes.io/version: 1.0-SNAPSHOT
  name: people
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: people
      app.kubernetes.io/version: 1.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-url: <<unknown>>
        app.quarkus.io/commit-id: e4de24b75fe3e56b67360458aa1de9ad19b5c2af
        app.quarkus.io/build-timestamp: 2024-01-31 - 05:50:34 +0000
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/name: people
        app.kubernetes.io/version: 1.0-SNAPSHOT
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/user2-project/people:1.0-SNAPSHOT
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: people
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/started
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: e4de24b75fe3e56b67360458aa1de9ad19b5c2af
    app.quarkus.io/build-timestamp: 2024-01-31 - 05:50:34 +0000
  labels:
    app.kubernetes.io/name: people
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: people
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: people
